FB Friends added

--- a/client/helloworld.html
+++ b/client/helloworld.html
@@ -20,5 +20,6 @@
 	<div>
 		My id is {{id}}
 	</div>
-	<button class='refresh_quotes'>Refresh</button>
+	<button class='refresh_button'>Refresh</button>
+	<button class='friends_button'>Friends</button>
 </template>
