save screen working

--- a/client/helloworld.html
+++ b/client/helloworld.html
@@ -28,7 +28,7 @@
 	<div class='snippetItem'>
 		<h3>{{title}}</h3><a href="{{href}}">{{href}}</a>
 		<p>{{text}}</p>
-		<button class="save">Save</button>
+		<button class="save_button">Save</button>
 		<button class='share_button'>Share</button>
 	</div>
 </template>
@@ -43,4 +43,6 @@ Log in as user:
 <template name="buttons">
 	<button class='refresh_button'>Refresh</button>
 	<button class='friends_button'>Friends</button>
+	<button class='share_screen_button'>Share Screen</button>
+	<button class='save_screen_button'>Save Screen</button>
 </template>
