Sharing done; multi users done

--- a/client/helloworld.html
+++ b/client/helloworld.html
@@ -52,6 +52,7 @@ Log in as user:
 
 <template name="buttons">
 	<button class='refresh_button'>Refresh</button>
+	<button class='delete_button'>Delete :o</button>
 	<button class='friends_button'>Friends</button>
 	<button class='share_screen_button'>Share Screen</button>
 	<button class='save_screen_button'>Save Screen</button>
