got path of share working!

--- a/client/helloworld.html
+++ b/client/helloworld.html
@@ -28,6 +28,7 @@
 	<div class='snippetItem'>
 		<h3>{{title}}</h3><a href="{{href}}">{{href}}</a>
 		<p>{{text}}</p>
+		<p>{{user_path}}</p>
 		<button class="save_button">Save</button>
 		<button class='share_button'>Share</button>
 		{{> friends_list}}
