--- a/client/helloworld.html
+++ b/client/helloworld.html
@@ -1,5 +1,8 @@
 <head>
   <title>SnipSnap!</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <link rel="stylesheet" type="text/css" ref="style.css">
   <link href='http://fonts.googleapis.com/css?family=Patua+One' rel='stylesheet' type='text/css'>
 </head>
