less not restarting; clicking sidebar works

--- a/client/helloworld.html
+++ b/client/helloworld.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet/less" href="index.less" />
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/less.js/1.7.3/less.min.js"></script>
-	<script> less.watch(); less.env = "development"; localStorage.clear(); </script>
+	
 
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
@@ -188,7 +188,7 @@ Log in as user:
 		<div class="author-image"></div>
 	</div>
 
-	<p class="message-excerpt"><h3>hi {{title}}</h3></p>
+	<p class="message-excerpt"><h3>{{title}}</h3></p>
 	
 </li>
 </template>
